<resources>
    <string name="app_name">TalkMe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="login_txt_bienvenida">Bienvenido a TalkMe</string>
    <string name="login_txt_introducirlogin">Introduzca su login</string>
    <string name="login_btn_login">Entrar</string>
    <string name="login_btn_registrar">Registrarse</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensajes_txt_enviando">Enviar mensaje para: </string>
    <string name="mensajes_txt_user">Usuario </string>
    <string name="mensajes_btn_send">Enviar</string>
</resources>
