<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.amaciasj.di.talkme.EnviarMensajes"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mensajes_txt_enviando"
        android:id="@+id/txt_enviando" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_nom_usuario"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mensajes_txt_user"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="155dp"
        android:ems="10"
        android:id="@+id/edit_mensaje" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mensajes_btn_send"
        android:layout_marginTop="65dp"
        android:id="@+id/btn_send"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
